--- a/basics/templates/basics/actofgoods_startpage.html
+++ b/basics/templates/basics/actofgoods_startpage.html
@@ -79,7 +79,10 @@
 		          		<div class="form-group">
 		  					<input type="password" class="form-control input-lg" placeholder="Password" name="check_password" required/>
 		  				</div>
-
+            </div>
+            <div class="form-group" style="display: none;">
+              <input type="text" class="form-control input-lg" placeholder="Password" id="address-input" name="address" required/>
+            </div>
               <div class="alert alert-info " role="alert">We need a location to provide you best information. Add here.
         					{% include "basics/map_testing.html" %}
     					</div>
@@ -142,7 +145,6 @@
 			</div>
 		</div>
 	</div>
-</div>
 
 <script>
   //because shit is not working
