--- a/basics/templates/basics/actofgoods_startpage.html
+++ b/basics/templates/basics/actofgoods_startpage.html
@@ -81,11 +81,17 @@
 		  				</div>
             </div>
             <div class="form-group" style="display: none;">
-              <input type="text" class="form-control input-lg" placeholder="Password" id="address-input" name="address" required/>
+              <input type="text" class="form-control input-lg"   id="address-input" name="address" required/>
             </div>
-              <div class="alert alert-info " role="alert">We need a location to provide you best information. Add here.
-        					{% include "basics/map_testing.html" %}
-    					</div>
+            <div class="form-group" style="display: none;">
+              <input type="float" class="form-control input-lg"  id="lng" name="lng" required/>
+            </div>
+            <div class="form-group" style="display: none;">
+              <input type="float" class="form-control input-lg"  id="lat" name="lat" required/>
+            </div>
+            <div class="alert alert-info " role="alert">We need a location to provide you best information. Add here.
+      					{% include "basics/map_testing.html" %}
+  					</div>
 						<div class="form-group">
 							<p id="terms-of-use-privacy-polices">By clicking on "Register" you accept the <a href="#" data-toggle="modal" data-target=".modal-terms-of-use">Terms of Use</a> and the <a href="#" data-toggle="modal" data-target=".modal-privacy-polices">Privacy Polices</a>!</p>
 						</div>
