--- a/basics/templates/basics/map_testing.html
+++ b/basics/templates/basics/map_testing.html
@@ -49,7 +49,9 @@
        			<h2 class="text-center">Choose your Location</h2>
       		</div>
        		<div class="modal-body">
-
+        <div class="form-group" id="add-location-alert" style="visibility: hidden;">
+					<p id="option"><b>1. Option: </b>The easiest way to get your location is to use the autolocation function.<button type="button" class="btn btn-primary" style="margin-left: 15px; margin-right: 15px" onclick="getLocation()">Get my Location</button></p>
+				</div>
 				<div class="form-group" id="location-form">
 					<p id="option"><b>1. Option: </b>The easiest way to get your location is to use the autolocation function.<button type="button" class="btn btn-primary" style="margin-left: 15px; margin-right: 15px" onclick="getLocation()">Get my Location</button></p>
 				</div>
@@ -62,7 +64,7 @@
        						<div class="form-group" id="location-form">
            						<label class="col-sm-2 control-label" for="textinput">Str. Addr.</label>
            							<div class="col-sm-9">
-          	 						<input type="text" placeholder="Street Address" class="form-control">
+          	 						<input type="text" id="street" placeholder="Street Address" class="form-control">
        							</div>
        						</div>
 
@@ -70,7 +72,7 @@
 							<div class="form-group" id="location-form">
 								<label class="col-sm-2 control-label" for="textinput">City</label>
 								<div class="col-sm-9">
-									<input type="text" placeholder="City" class="form-control">
+									<input type="text" id="city" placeholder="City" class="form-control">
 								</div>
 							</div>
 
@@ -78,7 +80,7 @@
        						<div class="form-group" id="location-form">
            						<label class="col-sm-2 control-label" for="textinput">State</label>
            						<div class="col-sm-4">
-           							<input type="text" placeholder="State/Province/Region" class="form-control">
+           							<input type="text"  id="state" placeholder="State/Province/Region" class="form-control">
            						</div>
            						<label class="col-sm-2 control-label" for="textinput" id="postcode">Postcode</label>
            						<div class="col-sm-3">
@@ -429,10 +431,11 @@
 
   function addressInput(){
     if(marker != null){
-      $('#address-input').val(marker.getPosition().lng() + " , " +marker.getPosition().lat() )
+      $('#lng').val(marker.getPosition().lng());
+      $('#lat').val(marker.getPosition().lat());
     }
-    else{
-      $('#address-input').val("some address here")
+    else if($('#state').val != "" && $('#city').val != ""){
+      $('#address-input').val($('#state').val + ", " + $('#city').val);
     }
   }
 </script>
