--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -156,7 +156,7 @@
 													<div class="form-group">
 														<label class="sr-only" for="InputPassword">Password</label>
 														<input type="password" class="form-control" name="password" placeholder="Password" required>
-														<div class="help-block text-right"><a href="{% url 'basics:reset_password_page'%}">Forgot the password?</a></div>
+														<div class="help-block text-right"><a id="reset-password-link" href="{% url 'basics:reset_password_page'%}">Forgot the password?</a></div>
 													</div>
 													<div class="form-group">
 														<button type="submit" id="login" class="btn btn-primary btn-block">Sign in</button>
