--- a/basics/templates/basics/needs_all.html
+++ b/basics/templates/basics/needs_all.html
@@ -73,7 +73,7 @@
              <li style="width:20%;">comments (3)</li>
              <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span>Location</a></li>
              <li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
-             <li style="width:20%;"><a href="{% url 'basics:chat' %}">Help</a><span class="fa fa-question"></span></li>
+             <li style="width:20%;"><a id="help-link" href="{% url 'basics:chat' %}">Help</a><span class="fa fa-question"></span></li>
            </ul>
          </div>
 
