--- a/basics/templates/basics/actofgoods_startpage.html
+++ b/basics/templates/basics/actofgoods_startpage.html
@@ -81,13 +81,13 @@
 		  				</div>
             </div>
             <div class="form-group" style="display: none;">
-              <input type="text" class="form-control input-lg"   id="address-input" name="address" required/>
+              <input type="text" class="form-control input-lg"   id="address-input" name="address"/>
             </div>
             <div class="form-group" style="display: none;">
-              <input type="float" class="form-control input-lg"  id="lng" name="lng" required/>
+              <input type="float" class="form-control input-lg"  id="lng" name="lng"/>
             </div>
             <div class="form-group" style="display: none;">
-              <input type="float" class="form-control input-lg"  id="lat" name="lat" required/>
+              <input type="float" class="form-control input-lg"  id="lat" name="lat"/>
             </div>
             <div class="alert alert-info " role="alert">We need a location to provide you best information. Add here.
       					{% include "basics/map_testing.html" %}
