remove alert in aboutus and actofgoods

--- a/basics/static/basics/css/startpage.css
+++ b/basics/static/basics/css/startpage.css
@@ -78,7 +78,7 @@
 			color: #C43B31;
 		}
 
-		#terms-of-use-privacy-polices, #terms-of-use-privacy-polices > a {
+		#terms-of-use-privacy-polices, #terms-of-use-privacy-polices > a, #choose-location-text {
 			color: #70962c;
 		}
 		
