--- a/basics/templates/basics/needs_new.html
+++ b/basics/templates/basics/needs_new.html
@@ -22,13 +22,11 @@
 						</div>
 					<div class="form-group">
 						<textarea type="description" class="form-control input-lg" placeholder="description" name="{{need.text.name}}"  rows="4"></textarea>
-					</div>
-					<p style="font-size:160%;"> location <p\>
-					<div class="checkbox" >
-							<label>
-								<input type="checkbox" data-toggle="switch" value="True" name="toggle_button"> use my current location
-							</label>
-					</div>
+					</div>		
+					<div class="form-group">
+             				<p id="choose-location-text">If you do not like to use your standard location choose an other one.
+      					{% include "basics/map_testing.html" %}</p>
+					</div>	
 
 					<div class="form-group">
 						<input type="submit" class="btn btn-block btn-lg btn-primary" value="Create & Send"/>
