--- a/basics/templates/basics/actofgoods_startpage.html
+++ b/basics/templates/basics/actofgoods_startpage.html
@@ -79,21 +79,22 @@
 		          		<div class="form-group">
 		  					<input type="password" class="form-control input-lg" placeholder="Password" name="check_password" required/>
 		  				</div>
-            
-
-            <div class="form-group" style="display: none;">
-              <input type="text" class="form-control input-lg"   id="address-input" name="address"/>
-            </div>
-            <div class="form-group" style="display: none;">
-              <input type="float" class="form-control input-lg"  id="lng" name="lng"/>
-            </div>
-            <div class="form-group" style="display: none;">
-              <input type="float" class="form-control input-lg"  id="lat" name="lat"/>
-            </div>
+							{% if messages %}
+	    						{% for message in messages %}
+	    							{% if message.message == 'location_failed' %}
+										<div class="form-group">
+											<div class="error-messages">
+	    										<p>Your location failed.</p>
+											</div>
+										</div>
+	    							{% endif %}
+	    						{% endfor %}
+							{% endif %}
 						<div class="form-group">
              				<p id="choose-location-text">We need your roughly location to provide only necessary information for you.
-      					{% include "basics/map_testing.html" %}</p>
-						</div>			
+      					</p>
+						</div>
+						{% include "basics/map_testing.html" %}
 						<div class="form-group">
 							<p id="terms-of-use-privacy-polices">By clicking on "Register" you accept the <a href="#" data-toggle="modal" data-target=".modal-terms-of-use">Terms of Use</a> and the <a href="#" data-toggle="modal" data-target=".modal-privacy-polices">Privacy Polices</a>!</p>
 						</div>
