--- a/basics/templates/basics/needs_new.html
+++ b/basics/templates/basics/needs_new.html
@@ -10,13 +10,13 @@
 			<div class="modal-body">
 				<form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
 					{%csrf_token%}
-					<p style="font-size:160%;"> category <p\>
+					<p style="font-size:160%;"> category </p>
 					<select class="form-control" name="{{need.categorie.name}}">
 						{% for categorie in categories%}
 							<option value="{{categorie.id}}">{{categorie.name}}</option>
 						{% endfor %}
 					</select>
-					<p style="font-size:160%;"> description <p\>
+					<p style="font-size:160%;"> description </p>
 						<div class="form-group">
 							<input type="description" class="form-control input-lg" placeholder="headline" name="{{need.headline.name}}"  rows="4"></textarea>
 						</div>
