fixed navigation links

--- a/administration/templates/administration/base_admin.html
+++ b/administration/templates/administration/base_admin.html
@@ -60,7 +60,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="{% url 'basics:home' %}">
+						<a class="navbar-brand" href="{% url 'administration:mails' %}">
 							<img id="brand-image" src={% static 'basics/images/AoGLogo.png'%} alt="Act of Goods"/>
 						</a>
 					</div>
@@ -95,7 +95,7 @@
 			<div class="row" id="footer-row">
         			<div class="col-lg-12 col-md-12 col-sm-12">
 					<ul class="nav nav-pills nav-justified">
-						<li><a {% if user.is_authenticated %} href="{% url 'basics:home' %}" {% else %} href="{% url 'basics:login' %}" {% endif %}>Act of Goods</a></li>
+						<li><a {% if user.is_authenticated %} href="{% url 'administration:mails' %}" {% else %} href="{% url 'basics:login' %}" {% endif %}>Act of Goods</a></li>
 						<li><a href="{% url 'basics:privacy' %}">Privacy</a></li>
 						<li><a href="{% url 'basics:aboutus' %}">About Us</a></li>
 					</ul>
