--- a/administration/templates/administration/groups.html
+++ b/administration/templates/administration/groups.html
@@ -1,4 +1,33 @@
 {% extends 'administration/base_admin.html' %}
 {% block content %}
-
+		<div class="container">
+            <a href="{% url 'administration:new_group' %}" class="btn btn-success btn-sm" title="new Group">
+                <span class="glyphicon glyphicon-plus"></span>
+            </a>
+            <table class = "table table-hover">
+                <thead>
+                    <tr>
+                        <th>Groupname</th>
+                        <th>E-Mail</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for group in groups %}
+                    <tr>
+                        <th>{{ group.name }}</th>
+                        <th></th>
+                        <th>
+                            <a href="#" class="btn btn-warning btn-sm" title="edit">
+                                <span class="glyphicon glyphicon-pencil"></span>
+                            </a>
+                            <a href="#" class="btn btn-danger btn-sm" title="delete">
+                                <span class="glyphicon glyphicon-remove"></span>
+                            </a>
+                        </th>
+                    </tr>
+                    {% endfor %}
+                 </tbody>
+            </table>
+        </div>
 {% endblock %}
