changed model for groupdata, you need to run makemigrations and migrate again

--- a/administration/templates/administration/new_group.html
+++ b/administration/templates/administration/new_group.html
@@ -11,6 +11,9 @@
 					{%csrf_token%}
 					<p style="font-size:160%;"> description <p\>
 					<div class="form-group">
+		  				<input type="name" class="form-control input-lg" placeholder="Name" name="name" required/>
+		  			</div>
+					<div class="form-group">
 		  				<input type="email" class="form-control input-lg" placeholder="Email" name="email" required/>
 		  			</div>
 					<div class="form-group">
